--- a/style.css
+++ b/style.css
@@ -2,90 +2,62 @@
     box-sizing: border-box;
 }
 
-
-body{
+body {
     display:flex;
+    flex-direction: column;
     justify-content: center;
-    
-}
-
-.card {
-    
-    
-    display:flex;
-    background-color: rgba(55, 103, 143, 0.959);
-    
     align-items: center;
-    border-left: 1px solid black;
-    padding: 10px ;
-    
+}
+
+.container {
+    border: 1px solid black;
+    display:flex;
+    flex-direction: column;
+    width:500px;
+    height:600px;
     
 }
 
 
 
-.screen{
+.screen {
+    border: 1px solid blue;
+    flex:.55;
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
-    background-color: slategrey;
-    border-bottom: 1px solid black;
-    border-right: 1px solid black;
-    border-top: 1px solid black;
-    font-size: 60px;
-    color: black;
-    padding:60px;
-}
-
-.stored{
-    display: flex;
+    justify-content: end;
+    align-items: end;
     flex-wrap: wrap;
-    max-width: 480;
-   
-    border: 1px solid tomato
-
 }
 
-.entered {
-    display: flex;
-    max-width: 480;
-    border: 1px solid tomato
-
-    }
-
-
-
-.first, .second, .third, .fourth{
-    display: flex;
-    
-    justify-content: space-around;
-    border-bottom: 1px solid black;
-    
-
-        
+ .input, .output {
+     flex:1;
+     font-size: xx-large;
+     
+    border: 1px solid black;
 }
 
-
-.button{
-    
+.buttons{
+    flex:1;
+    display:flex;
+    flex-direction: column;
+}
+.row{
+    flex:1;
+    border: 1px solid black;
     display:flex;
     justify-content: center;
-    font-size:xx-large;
-    background-color:steelblue;
-    color:whitesmoke;
-    padding:60px;
-    width:25px;
-    border-right: 1px solid black;
-    
 }
 
-#equals {
-
+.col{
+    display:flex;
+    justify-content: center;
+    align-items: center;
     
+    border:1px solid yellow;
+    flex:1;
+}
+#double {
     flex:2;
 }
-
-
-
-
 
