--- a/style.css
+++ b/style.css
@@ -1,63 +1,90 @@
-*{
-    box-sizing: border-box;
-}
-
-body {
+.container{
     display:flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 600px;
+
 }
 
-.container {
-    border: 1px solid black;
+.calculator{
+    border: 5px solid black;
+    width: 33%;
+    height: 100%;
     display:flex;
     flex-direction: column;
-    width:500px;
-    height:600px;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    border-radius: 5%;
+    flex:.2;
+   
+}
+
+.display{
+    margin-top:10px;
+    font-size: 24px;
+    width:90%;
+flex: .3;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+background-color: lightgray;
+border: solid 3px darkgray;
+border-radius: 5%;
+}
+
+.input {
+    border-bottom:.5px solid rgba(105, 105, 105, 0.295);
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin-top: 10px;
+  margin-bottom: 10px;
+    height:45%;
+}
+
+.output {
+    border-top:.5px solid rgba(169, 169, 169, 0.096);
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height:45%;
+    color: rgb(128, 128, 128);
     
-}
-
-
-
-.screen {
-    border: 1px solid blue;
-    flex:.55;
-    display: flex;
-    flex-direction: column;
-    justify-content: end;
-    align-items: end;
-    flex-wrap: wrap;
-}
-
- .input, .output {
-     flex:1;
-     font-size: xx-large;
-     
-    border: 1px solid black;
 }
 
 .buttons{
-    flex:1;
+   
+    flex:.7;
     display:flex;
     flex-direction: column;
-}
-.row{
-    flex:1;
-    border: 1px solid black;
-    display:flex;
-    justify-content: center;
-}
-
-.col{
-    display:flex;
     justify-content: center;
     align-items: center;
-    
-    border:1px solid yellow;
-    flex:1;
+    height: 60%;
+    width: 90%;
+    color: blanchedalmond;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    gap:5px;
 }
-#double {
-    flex:2;
+
+
+.row {
+    display: flex;
+    width:100%;
+    flex: 0.2;
+    gap:5px;
+    
+}
+
+.calc-but{
+    border: 4px solid darkgray;
+    border-radius: 5%;
+    background-color: rgba(169, 169, 169, 0.603);
+    padding: 20px;
+    flex:.5;
 }
 
