added functionality to input one number then add an operator. Next need to update the input so that a new number is store. Getting there in terms of full functionality

--- a/style.css
+++ b/style.css
@@ -46,6 +46,9 @@ border-radius: 5%;
     margin-top: 10px;
   margin-bottom: 10px;
     height:45%;
+    font-size: xx-large;
+    flex-wrap: wrap;
+    
 }
 
 .output {
