--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ border-radius: 5%;
     height:45%;
     font-size: xx-large;
     flex-wrap: wrap;
+    color: rgb(128, 128, 128);
     
 }
 
@@ -58,7 +59,8 @@ border-radius: 5%;
     align-items: center;
     width: 100%;
     height:45%;
-    color: rgb(128, 128, 128);
+    
+    font-size: xx-large;
     
 }
 
